--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ FAMOUS RETRO GAMES
         <tr>
           <td><img src="Tekken.png" width="100" height="50"></td>
           <td style="color:red;">
-               <img src="tekken2.gif" width= "100" height="50"> 
+               <img src="tekken2.gif" width= "400" height="200"> 
             <audio src="tekken.mp3" controls width="100"> 
             </audio> 
             Tekken 2[b] is a fighting game developed and published by Namco.
@@ -43,7 +43,7 @@ FAMOUS RETRO GAMES
         </tr>
         <tr>
           <td>
-            <img src="Contra.png" width="100" height="50">
+            <img src="Contra.png" width= "400" height="200">
           </td>
           <td style="color:yellow;">
                <img src="contra.gif" width= "100" height="50"> 
@@ -57,7 +57,7 @@ FAMOUS RETRO GAMES
             and the NES version as Probotector in PAL regions and France.</td>
         </tr>
       <tr>
-        <td><img src="Mario.png" width="100" height="50"> </td>
+        <td><img src="Mario.png" width= "400" height="200"> </td>
         <td style="color:green;">
              <img src="mario.gif" width= "100" height="50"> 
           <audio src="mario.mp3" controls width="100"> 
@@ -65,7 +65,7 @@ FAMOUS RETRO GAMES
           Super Mario[a] (also known as Super Mario Bros.[b] and Mario[c]) is a platform game series created by Nintendo starring their mascot, Mario. It is the central series of the greater Mario franchise. At least one Super Mario game has been released for every major Nintendo video game console. However, there have also been a number of Super Mario video games released on non-Nintendo gaming platforms.[1] There are more than 20 games in the series.</td>
       </tr>
       <tr>
-        <td><img src="zelda.png" width="100" height="50"></td>
+        <td><img src="zelda.png" "width= "400" height="200" ></td>
         <td style="color:yellow;">
              <img src="zelda.gif" width= "100" height="50">  
           <audio src="zelda.mp3" controls width="100"> 
