--- a/index.html
+++ b/index.html
@@ -50,13 +50,16 @@ FAMOUS RETRO GAMES
                <img src="contra.gif" width= "100" height="50"> 
            <br> 
 <audio src="contra.mp3" controls width="100"> 
-            </audio> 
+            </audio>
+            <blockquote>
             Contra[a] is a run and gun video game developed and published by Konami, 
             originally developed as a coin-operated arcade video game in 1986[5][6] and released on February 20, 1987.
             [7][8] A home version was released for the Nintendo Entertainment System in 1988,
             along with ports for various home computer formats, including the MSX2. 
             The arcade and computer versions were localized as Gryzor in Europe, 
-            and the NES version as Probotector in PAL regions and France.</td>
+            and the NES version as Probotector in PAL regions and France.
+            </blockquote>
+          </td>
         </tr>
       <tr>
         <td><img src="Mario.png" width= "400" height="200"> </td>
