--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@ FAMOUS RETRO GAMES
             <audio src="tekken.mp3" controls width="100"> 
             </audio> 
             Tekken 2[b] is a fighting game developed and published by Namco.
-            The second entry in the Tekken series, it was released for arcades in 1995,
+            The second entry in the Tekken series, 
+            it was released for arcades in 1995,
             and ported to the PlayStation the following year. 
-            The arcade version was later released in Tekken 5 Arcade History mode for the PlayStation 2. </td>
+            The arcade version was later released in Tekken 5 
+            Arcade History mode for the PlayStation 2. </td>
         </tr>
         <tr>
           <td>
@@ -68,7 +70,11 @@ FAMOUS RETRO GAMES
          <br> 
           <audio src="mario.mp3" controls width="100"> 
             </audio> 
-          Super Mario[a] (also known as Super Mario Bros.[b] and Mario[c]) is a platform game series created by Nintendo starring their mascot, Mario. It is the central series of the greater Mario franchise. At least one Super Mario game has been released for every major Nintendo video game console. However, there have also been a number of Super Mario video games released on non-Nintendo gaming platforms.[1] There are more than 20 games in the series.</td>
+          Super Mario[a] (also known as Super Mario Bros.[b] and Mario[c]) is a platform game series created by Nintendo starring their mascot, Mario. 
+          It is the central series of the greater Mario franchise. At least one Super Mario game has been released for every major Nintendo video game console. 
+          However, there have also been a number of Super Mario video games released on non-Nintendo gaming platforms.
+          [1] There are more than 20 games in the series.
+        </td>
       </tr>
       <tr>
         <td><img src="zelda.png" "width= "400" height="200" ></td>
@@ -77,7 +83,10 @@ FAMOUS RETRO GAMES
           <br>
           <audio src="zelda.mp3" controls width="100"> 
             </audio> 
-          The Legend of Zelda[a] is an action-adventure game franchise created by the Japanese game designers Shigeru Miyamoto and Takashi Tezuka. It is primarily developed and published by Nintendo, although some portable installments and re-releases have been outsourced to Flagship, Vanpool, and Grezzo. Its gameplay incorporates action-adventure and elements of action RPG games.</td>
+          The Legend of Zelda[a] is an action-adventure game franchise created by the Japanese game designers Shigeru Miyamoto and Takashi Tezuka.
+          It is primarily developed and published by Nintendo, although some portable installments and re-releases have been outsourced to Flagship,
+          Vanpool, and Grezzo. Its gameplay incorporates action-adventure and elements of action RPG games.
+        </td>
       </tr>
     </table>
   </center> 
